--- a/.forceignore
+++ b/.forceignore
@@ -2,7 +2,14 @@
 # More information: https://developer.salesforce.com/docs/atlas.en-us.sfdx_dev.meta/sfdx_dev/sfdx_dev_exclude_source.htm
 #
 
+# Standard metadata
 package.xml
+**appMenu
+**appSwitcher
+**navigationMenus
+**objectTranslations
+**profiles
+**settings
 
 # LWC configuration files
 **/jsconfig.json
