--- a/.prettierignore
+++ b/.prettierignore
@@ -2,5 +2,8 @@
 # More information: https://prettier.io/docs/en/ignore.html
 #
 
-.sfdx
+**/staticresources/**
 .localdevserver
+.sfdx
+.vscode
+jsconfig.json
