Disabled cache for scratch org (dev mode)

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,4 +1,9 @@
 {
-  "edition": "Developer",
-  "features": []
+    "edition": "Developer",
+    "features": [],
+    "settings": {
+        "mobileSettings": {
+            "enableS1EncryptedStoragePref2": false
+        }
+    }
 }
