Added Jest tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,7 @@ jobs:
             # ESlint
             - name: 'Linting'
               run: npm run lint
+
+            # LWC Unit tests
+            - name: 'LWC unit tests'
+              run: npm run test:unit
