CI with Scratch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,3 +45,41 @@ jobs:
             # LWC Unit tests
             - name: 'LWC unit tests'
               run: npm run test:unit
+
+    scratch-org-test:
+        runs-on: ubuntu-latest
+        needs: formatting-and-lwc-tests
+        steps:
+            # Install Salesforce CLI
+            - name: Install Salesforce CLI
+              run: |
+                  wget https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
+                  mkdir sfdx-cli
+                  tar xJf sfdx-linux-amd64.tar.xz -C sfdx-cli --strip-components 1
+                  ./sfdx-cli/install
+
+            # Checkout the code in the pull request
+            - name: 'Checkout source code'
+              uses: actions/checkout@v2
+
+            # Store secret for dev hub
+            - name: 'Populate auth file with DEVHUB_SFDX_URL secret'
+              shell: bash
+              run: 'echo ${{ secrets.DEVHUB_SFDX_URL}} > ./DEVHUB_SFDX_URL.txt'
+
+            # Authenticate dev hub
+            - name: 'Authenticate Dev Hub'
+              run: 'sfdx force:auth:sfdxurl:store -f ./DEVHUB_SFDX_URL.txt -a devhub -d'
+
+            # Create scratch org
+            - name: 'Create scratch org'
+              run: 'sfdx force:org:create -f config/project-scratch-def.json -a scratch-org -s -d 1'
+
+            # Deploy source to scratch org
+            - name: 'Push source to scratch org'
+              run: 'sfdx force:source:push'
+
+            # Housekeeping
+            - name: 'Delete scratch org'
+              if: always()
+              run: 'sfdx force:org:delete -p -u scratch-org'
