--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
         "eslint": "^7.1.0",
         "husky": "^4.2.5",
         "lint-staged": "^10.2.7",
-        "prettier": "^2.0.5",
-        "prettier-plugin-apex": "^1.5.0"
+        "prettier": "^2.0.5"
     },
     "husky": {
         "hooks": {
