--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "test:unit:debug": "sfdx-lwc-jest --debug",
         "test:unit:coverage": "sfdx-lwc-jest --coverage",
         "prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
-        "prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\""
+        "prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
+        "postinstall": "husky install",
+        "precommit": "lint-staged"
     },
     "repository": {
         "type": "git",
@@ -32,19 +34,19 @@
     },
     "homepage": "https://github.com/tableau/tableau-viz-lwc#readme",
     "devDependencies": {
-        "@prettier/plugin-xml": "^0.7.2",
-        "@salesforce/eslint-config-lwc": "^0.7.0",
-        "@salesforce/sfdx-lwc-jest": "^0.7.1",
-        "eslint": "^7.1.0",
-        "husky": "^4.2.5",
-        "lint-staged": "^10.2.7",
-        "prettier": "^2.0.5",
-        "prettier-plugin-apex": "^1.5.0"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
+        "@lwc/eslint-plugin-lwc": "^1.0.1",
+        "@prettier/plugin-xml": "^0.13.1",
+        "@salesforce/eslint-config-lwc": "^2.0.0",
+        "@salesforce/eslint-plugin-lightning": "^0.1.1",
+        "@salesforce/sfdx-lwc-jest": "^0.13.0",
+        "eslint": "^7.29.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.23.4",
+        "eslint-plugin-jest": "^24.3.6",
+        "husky": "^6.0.0",
+        "lint-staged": "^11.0.0",
+        "prettier": "^2.3.2",
+        "prettier-plugin-apex": "^1.10.0"
     },
     "lint-staged": {
         "**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}": [
