--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "test:unit:debug": "sfdx-lwc-jest --debug",
         "test:unit:coverage": "sfdx-lwc-jest --coverage",
         "prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
-        "prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\""
+        "prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
+        "postinstall": "husky install",
+        "precommit": "lint-staged"
     },
     "repository": {
         "type": "git",
@@ -32,19 +34,18 @@
     },
     "homepage": "https://github.com/tableau/tableau-viz-lwc#readme",
     "devDependencies": {
-        "@prettier/plugin-xml": "^0.7.2",
-        "@salesforce/eslint-config-lwc": "^0.7.0",
-        "@salesforce/sfdx-lwc-jest": "^0.7.1",
-        "eslint": "^7.1.0",
-        "husky": "^4.2.5",
-        "lint-staged": "^10.2.7",
-        "prettier": "^2.0.5",
-        "prettier-plugin-apex": "^1.5.0"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
+        "@lwc/eslint-plugin-lwc": "^1.1.1",
+        "@prettier/plugin-xml": "^1.2.0",
+        "@salesforce/eslint-config-lwc": "^3.2.1",
+        "@salesforce/eslint-plugin-lightning": "^1.0.0",
+        "@salesforce/sfdx-lwc-jest": "^1.1.0",
+        "eslint": "^8.6.0",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-jest": "^25.3.4",
+        "husky": "^7.0.4",
+        "lint-staged": "^12.1.7",
+        "prettier": "^2.5.1",
+        "prettier-plugin-apex": "^1.10.0"
     },
     "lint-staged": {
         "**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}": [
